--- a/_config.yml
+++ b/_config.yml
@@ -7,14 +7,14 @@
 # server process.
 
 # Basic Site Settings
-locale                   : "en-US"
-title                    : "Your Name / Site Title"
+locale                   : "en-UK"
+title                    : "Anouar El Moumane"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "personal description"
-url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
-baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "academicpages/academicpages.github.io"
+#name                     : &name "Your Name"
+#description              : &description "personal description"
+#url                      : https://academicpages.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+#baseurl                  : "" # the subpath of your site, e.g. "/blog"
+#repository               : "academicpages/academicpages.github.io"
 
 # Site Author - The following control what appear as part of the author content on the side bar.
 #               If a field is blank the icon and link will not appear, otherwise it will be shown.
@@ -22,13 +22,13 @@ repository               : "academicpages/academicpages.github.io"
 author:
   # Biographic information
   avatar           : "profile.png"
-  name             : "Your Sidebar Name"
-  pronouns         : # example: "she/her"  
-  bio              : "Short biography for the left-hand sidebar"
-  location         : "Earth"
-  employer         : "Red Brick University"
-  uri              : # URL
-  email            : "none@example.org" 
+  name             : "Anouar El Moumane"
+  #pronouns         : # example: "she/her"  
+  bio              : "I am scientist doing research primarily in statistical physics and soft condensed matter. Currently, I pursueing my docotorate degree at the University of Oxford supervised by Jonathan Doye."
+  location         : "Oxford"
+  employer         : "University of Oxford"
+  #uri              : # URL
+  email            : "elmoumane@thphy.uni-duesseldorf.de" 
 
   # Academic websites
   arxiv            : # URL - Update with the correct link to your profile
